Adding some new events

--- a/it_modernization/events.yaml
+++ b/it_modernization/events.yaml
@@ -2,7 +2,7 @@
 meta:
   title: Events
   version: 1.0.0
-  generated: 2025-04-30
+  generated: 2025-05-01
 
 events:
 
@@ -1116,17 +1116,19 @@ events:
     agency: Treasury
 
 - date: 2025-01-30
-  type: report
+  type: interagency
   event: Elon Musk reportedly visits GSA to meet with staff, several of whom are identified from appearances in the internal
     directory
   source: https://www.nextgov.com/people/2025/01/musk-visits-and-asserts-growing-influence-gsa/402628/
-  named:
-  - Elon Musk
-  - Steve Davis
-  - Nicole Hollander
-  - Thomas Shedd
-  - Stephen Ehikian
-  - Luke Farritor
+  interagency_doge_reps:
+    DOGE:
+    - Elon Musk
+    GSA:
+    - Steve Davis
+    - Nicole Hollander
+    - Thomas Shedd
+    - Stephen Ehikian
+    - Luke Farritor
   agency: GSA
   id: kSAAPBQJ
 
@@ -1617,14 +1619,15 @@ events:
     - DOGE
 
 - date: 2025-02-04
-  type: report
+  type: interagency
   event: One of AFGE's members who works in the headquarters of the Department received an instruction from Department leadership
     that Elon Musk and his DOGE team would be accessing Department of Labor headquarters beginning around 4 p.m. on February
     5, 2025. This member and other employees were told by Department leadership that when Mr. Musk and his team visit, they
     are to do whatever they ask, not to push back, not to ask questions. They were told to provide access to any DOL system
     they requested access to and not to worry about any security protocols; just do it.
-  named:
-  - Elon Musk
+  interagency_doge_reps:
+    DOGE:
+    - Elon Musk
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.29.8_1.pdf
   case_no: 1:25-cv-00339
   agency: DOL
@@ -7063,10 +7066,11 @@ events:
   id: jH38H7KC
 
 - date: 2025-03-12
-  type: report
+  type: interagency
   event: Elon Musk visits the NSA to meet with its top administrator, General Timothy Haugh
-  named:
-  - Elon Musk
+  interagency_doge_reps:
+    DOGE:
+    - Elon Musk
   source: https://www.wsj.com/politics/national-security/elon-musk-made-secret-visit-to-u-s-spy-agency-9b0b64e2?mod=hp_lead_pos5
   agency: NSA
   id: QZojvztE
@@ -7970,6 +7974,27 @@ events:
     - HHS
     - DOGE
 
+- date: 2025-03-18
+  type: promotion
+  case_no: 8:25-cv-00462
+  event: In a sworn statement, Jeremy Lewin declares he has never been an employee of USDS or Elon Musk. He reports he has
+    been the Deputy Administrator at USAID since March 18
+  named:
+  - Jeremy Lewin
+  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576293/gov.uscourts.mdd.576293.77.2.pdf
+  agency: USAID
+  id: bPH63xJM
+  source_title: J. Doe 1-26 v. Musk (D. Md)
+  case_info:
+    name: J. Doe 1-26 v. Musk (D. Md)
+    description: Twenty-six current and former employees of the U.S. Agency for International Development ("USAID") sued Elon
+      Musk and the Department of Government Efficiency ("DOGE") alleging that Musk's appointment to his role as head of DOGE
+      violates the Constitution's Appointments Clause
+    case_no: 8:25-cv-00462
+    date_filed: 2025-02-13
+    link: https://www.courtlistener.com/docket/69636722/does-1-26-v-musk/
+    agency: DOGE
+
 - date: 2025-03-19
   type: report
   event: In another sworn statement, Amy Gleason declares "every member of an agency's DOGE Team is an employee of the agency
@@ -7990,27 +8015,6 @@ events:
     case_no: 1:25-cv-00511
     date_filed: 2025-02-20
     link: https://www.courtlistener.com/docket/69658871/citizens-for-responsibility-and-ethics-in-washington-v-us-doge-service/
-    agency: DOGE
-
-- date: 2025-03-19
-  type: report
-  case_no: 8:25-cv-00462
-  event: In a sworn statement, Jeremy Lewin declares he has never been an employee of USDS or Elon Musk but reports he was
-    the DOGE team lead at USAID for a while
-  named:
-  - Jeremy Lewin
-  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576293/gov.uscourts.mdd.576293.77.2.pdf
-  agency: DOGE
-  id: bPH63xJM
-  source_title: J. Doe 1-26 v. Musk (D. Md)
-  case_info:
-    name: J. Doe 1-26 v. Musk (D. Md)
-    description: Twenty-six current and former employees of the U.S. Agency for International Development ("USAID") sued Elon
-      Musk and the Department of Government Efficiency ("DOGE") alleging that Musk's appointment to his role as head of DOGE
-      violates the Constitution's Appointments Clause
-    case_no: 8:25-cv-00462
-    date_filed: 2025-02-13
-    link: https://www.courtlistener.com/docket/69636722/does-1-26-v-musk/
     agency: DOGE
 
 - date: 2025-03-19
@@ -8126,6 +8130,15 @@ events:
   source: https://whistlebloweraid.org/wp-content/uploads/2025/04/2025_0414_Berulis-Disclosure-HELP-and-Oversight-with-Exhibits.pdf
   agency: NLRB
   id: bw2Rw3Hj
+
+- date: 2025-03-19
+  type: report
+  event: DOGE has reportedly hired Adam Hoffman to work on national security related projects
+  source: https://news.bgov.com/bloomberg-government-news/musks-doge-hires-ken-griffin-staffer-for-national-security-work
+  named:
+  - Adam Hoffman
+  agency: DOGE
+  id: mZDXKZv5
 
 - date: 2025-03-20
   type: legal
@@ -8790,24 +8803,6 @@ events:
     agency: DOGE
 
 - date: 2025-03-27
-  type: report
-  event: Elon Musk and 6 other DOGE staffers appear in a TV interview on FOX news with Brett Baier to defend DOGE. Among other
-    things, they asserted nobody has gotten fired, 40% of calls to one Social Security office were fraud, federal judges were
-    corrupt, the government should work like the Apple Store, and the target is 15% reduction in government spending. Amy
-    Gleason did not appear.
-  named:
-  - Elon Musk
-  - Joe Gebbia
-  - Tom Krause
-  - Steve Davis
-  - Anthony Armstrong
-  - Aram Moghaddassi
-  - Brad Smith
-  source: https://www.nbcnews.com/politics/doge/elon-musks-doge-tries-put-new-faces-reclusive-federal-office-rcna198491
-  agency: DOGE
-  id: bUjbhfkE
-
-- date: 2025-03-27
   type: official
   event: HHS announces a large reorganization reducing HHS from 28 to 15 divisions and elimination 20,000 jobs (or 25% of
     total). The URL slug of the press release includes "DOGE" in it.
@@ -9304,10 +9299,11 @@ events:
   id: QdDpAfxy
 
 - date: 2025-03-31
-  type: report
+  type: interagency
   event: Elon Musk visits the CIA at the invitation of its director, John Ratcliffe
-  named:
-  - Elon Musk
+  interagency_doge_reps:
+    DOGE:
+    - Elon Musk
   source: https://www.washingtonpost.com/national-security/2025/03/31/elon-musk-cia-doge/
   agency: CIA
   id: EvqS5mPP
@@ -10700,6 +10696,22 @@ events:
   agency: FDA
   id: 34MikyKs
 
+- date: 2025-04-21
+  type: access_granted
+  access_type: unknown
+  access_systems:
+  - ECAS
+  source: https://www.washingtonpost.com/immigration/2025/04/21/doge-ecas-justice-immigration-courts-trump/
+  event: A team of roughly 6 DOGE staffers working at the Department of Justice are granted access to the ECAS system, which
+    records sensitive information about immigration cases
+  named:
+  - Adam Hoffman
+  - Payton Rehling
+  - Marko Elez
+  - Jon Koval
+  agency: DOJ
+  id: 5CAR5KCo
+
 - date: 2025-04-22
   type: report
   event: Three DOGE staffers are now at the National Science Foundation reviewing grants. Luke Farritor has a "Budget, Finance,
@@ -10754,6 +10766,14 @@ events:
   source: https://www.rollingstone.com/politics/politics-features/trump-musk-doge-faa-nda-secret-project-lift-1235325667/
   agency: FAA
   id: kTuTZoGk
+
+- date: 2025-04-28
+  type: disruption
+  event: The head of a Peace Corps alumni group reports he had been told the agency is expecting large cuts in US staffing
+    ordered by DOGE
+  source: https://www.nytimes.com/2025/04/28/us/politics/peace-corps-cuts-doge.html
+  agency: Peace
+  id: as2btrZU
 
 - date: 2025-04-28
   type: report
